# dfnWorks

./: .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  breakup_dfnworks.txt  graphConversions.py  mesh_DFN_C++_v2.py  parse.py  pyproject.toml  setup.py  setup_commands.txt
inp_2_vtk/: ._temp_input.vtk  CMakeCache.txt  CMakeLists.txt  FEHM.jl  Makefile  README.md  a.out  cmake_install.cmake  example_avs_to_vtk.cpp  full_mesh.inp  full_mesh.vtk  full_mesh_correct.vtk  full_mesh_sf33.inp  inp2vtk  inp2vtk.c  inp2vtk.jl  main.cpp  test_uni33.vtk  test_vtk.py
inp_2_vtk/VTK-7.1.0/: CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  CTestCustom.cmake  Copyright.txt  Makefile  README.md  VTKCompileToolsConfig.cmake  VTKConfig.cmake  VTKConfigVersion.cmake  VTKData_config.cmake  VTKTargets.cmake  cmake_install.cmake  unix_path.sh
inp_2_vtk/VTK-7.1.0/Accelerators/Dax/: CMakeLists.txt  LICENSE.txt  module.cmake  vtkDaxConfig.h.in  vtkDaxContour.cxx  vtkDaxContour.h  vtkDaxContourImpl.cxx  vtkDaxContourImpl.h  vtkDaxDetailCommon.h  vtkDaxThreshold.cxx  vtkDaxThreshold.h  vtkDaxThresholdImpl.cxx  vtkDaxThresholdImpl.h
inp_2_vtk/VTK-7.1.0/Accelerators/Piston/: CMakeLists.txt  module.cmake  vtkDataSetToPiston.cxx  vtkDataSetToPiston.h  vtkPistonAlgorithm.cxx  vtkPistonAlgorithm.h  vtkPistonContour.cu  vtkPistonContour.cxx  vtkPistonContour.h  vtkPistonConverters.cu  vtkPistonDataObject.cxx  vtkPistonDataObject.h  vtkPistonDataWrangling.h  vtkPistonMapper.cu  vtkPistonMapper.cxx  vtkPistonMapper.h  vtkPistonMinMax.h  vtkPistonReference.h  vtkPistonScalarsColors.cxx  vtkPistonScalarsColors.h  vtkPistonSlice.cu  vtkPistonSlice.cxx  vtkPistonSlice.h  vtkPistonSort.cu  vtkPistonSort.cxx  vtkPistonSort.h  vtkPistonThreshold.cu  vtkPistonThreshold.cxx  vtkPistonThreshold.h  vtkPistonToDataSet.cxx  vtkPistonToDataSet.h
inp_2_vtk/VTK-7.1.0/CMake/: CTestCustom.cmake.in  CheckCXXExpressionCompiles.cmake  CheckCXXSourceRuns.cmake  ExternalData.cmake  ExternalData_config.cmake.in  ExtractBoostVersion.cmake  FindADIOS.cmake  FindDirectX.cmake  FindEGL.cmake  FindEigen2.cmake  FindEigen3.cmake  FindFFMPEG.cmake  FindFontConfig.cmake  FindGL2PS.cmake  FindGLEW.cmake  FindHDF5.cmake  FindJsonCpp.cmake  FindLIBPROJ4.cmake  FindMPEG2.cmake  FindMPI.cmake  FindMatlabMex.cmake  FindMySQL.cmake  FindNVCtrlLib.cmake  FindNetCDF.cmake  FindODBC.cmake  FindOGGTHEORA.cmake  FindOSMesa.cmake  FindOSPRay.cmake  FindOculusSDK.cmake  FindOpenMP.cmake  FindOpenVR.cmake  FindPQXX.cmake  FindPackageHandleStandardArgs.cmake  FindPostgreSQL.cmake  FindPythonLibs.cmake  FindPythonModules.cmake  FindR.cmake  FindSDL2.cmake  FindSWT.cmake  FindTBB.cmake  (+59 more)
inp_2_vtk/VTK-7.1.0/CMake/NewCMake/: CMakeParseArguments.cmake  FindHDF5.cmake  (+1 more)
inp_2_vtk/VTK-7.1.0/CMakeTmp/: src.c
inp_2_vtk/VTK-7.1.0/Deprecated/: TestGraphHierarchicalBundle.cxx  vtkGraphHierarchicalBundle.cxx  vtkGraphHierarchicalBundle.h  vtkStringToTimePoint.cxx  vtkStringToTimePoint.h  vtkTimePointToString.cxx  vtkTimePointToString.h
inp_2_vtk/VTK-7.1.0/Examples/: CMakeLists.txt  README.txt
inp_2_vtk/VTK-7.1.0/Remote/: CMakeLists.txt  Makefile  PoissonReconstruction.remote.cmake  README.md  WikiExamples.remote.cmake  cmake_install.cmake  vtkAddon.remote.cmake  vtkDICOM.remote.cmake
inp_2_vtk/VTK-7.1.0/Utilities/: tcl2py.py  vtk2xml.py
inp_2_vtk/VTK-7.1.0/lib/: libvtkCommonMath-7.1.so.1  libvtkCommonSystem-7.1.so.1  libvtkDomainsChemistry-7.1.so.1  libvtkDomainsChemistryOpenGL2-7.1.so.1  libvtkFiltersExtraction-7.1.so.1  libvtkFiltersHybrid-7.1.so.1  libvtkFiltersModeling-7.1.so.1  libvtkFiltersParallel-7.1.so.1  libvtkFiltersParallelImaging-7.1.so.1  libvtkFiltersSMP-7.1.so.1  libvtkFiltersSelection-7.1.so.1  libvtkFiltersStatistics-7.1.so.1  libvtkFiltersTexture-7.1.so.1  libvtkIOAMR-7.1.so.1  libvtkIOCore-7.1.so.1  libvtkIOLegacy-7.1.so.1  libvtkIOPLY-7.1.so.1  libvtkIOParallel-7.1.so.1  libvtkIOXML-7.1.so.1  libvtkImagingGeneral-7.1.so.1  libvtkImagingMath-7.1.so.1  libvtkImagingStencil-7.1.so.1  libvtkInteractionStyle-7.1.so.1  libvtkNetCDF_cxx-7.1.so.1  libvtkParallelCore-7.1.so.1  libvtkRenderingContext2D-7.1.so.1  libvtkRenderingImage-7.1.so.1  libvtkViewsContext2D-7.1.so.1  libvtkalglib-7.1.so.1  libvtkjpeg-7.1.so.1  libvtkjsoncpp-7.1.so.1  libvtklibxml2-7.1.so.1  libvtkpng-7.1.so.1  libvtksys-7.1.so.1  libvtkverdict-7.1.so.1  libvtkzlib-7.1.so.1
inp_2_vtk/parsed_vtk/: dfn_explicit-000.vtk
inp_2_vtk/tests/: dfn_explicit-000_temp.vtk  dfn_explicit-001.vtk  full_mesh.vtk  full_mesh_sf33.vtk  test_mesh.vtk  test_sf33.vtk  tmp.vtk
(+13986 files in other folders)
