cmake_minimum_required (VERSION 2.6)
project (inp2vtk)
set(VTK_DIR ${CMAKE_SOURCE_DIR}/VTK-7.1.0/)
find_package(VTK REQUIRED)
include(${VTK_USE_FILE})
add_executable(inp2vtk main.cpp)
target_link_libraries(inp2vtk ${VTK_LIBRARIES}) 

#file(GLOB_RECURSE headers ${CMAKE_SOURCE_DIR}/VTK-7.1.0/*.h)
    #set (INCLUDE_DIRS "")
    #foreach (_headerFile ${headers})
    #get_filename_component(_dir ${_headerFile} PATH)
    #list (APPEND INCLUDE_DIRS ${_dir})
    #endforeach()
    #list(REMOVE_DUPLICATES INCLUDE_DIRS)
    #file(GLOB_RECURSE link_Dirs ${CMAKE_SOURCE_DIR}/VTK-7.1.0/*.so)
    #set (LINK_DIRS "")
    #foreach (_linkDir ${link_Dirs})
    #get_filename_component(_dir ${_linkDir} PATH)
    #list (APPEND LINK_DIRS ${_dir})
    #endforeach()
    #list(REMOVE_DUPLICATES LINK_DIRS)
    #include_directories(${INCLUDE_DIRS})
    #link_directories(${LINK_DIRS})
